# cargo_sh

./: .gitignore  _mise.toml  ai_test.sh  cd_cargo.sh  clippy.sh  cov  dev.sh  dist.sh  env.sh  fix.sh  mise.sh  new.sh  pid.sh  rmdbg.sh  udeps.sh  upgrade.sh
_tmpl/: AGENTS.md  Cargo.toml
_tmpl/benches/: bench_binary.rs  bench_btreemap.rs  bench_external_pgm.rs  bench_hashmap.rs  bench_jdb_pgm.rs  main.rs
_tmpl/benches/js/: conf.js
_tmpl/src/: error.rs
bench/benches/js/lib/: bench.js
skills/: bench.md  code_review.md  doc.md  patch.md
